# fuxx

./: .gitignore  LICENSE  README.md  deps.edn  package-lock.json  package.json  shadow-cljs.edn
.github/workflows/: cljs.yml  contracts.yml  rust.yml
contracts/: capabilities.edn  envelopes.edn  plugins.edn
dev/fuxx/: dev.cljs
docs/: scaffold.md  specs.md
fuxx-host/: Cargo.toml  README.md
fuxx-host/src/: ipc.rs  lib.rs  main.rs
fuxx-host/src/capabilities/: fs.rs  http.rs  ipc_bridge.cljs  mod.rs  plugin.rs  window.rs
fuxx-host/tests/: capabilities_test.rs  ipc_test.rs
public/: index.html
public/css/: app.css
src/fuxx/: app.cljc  contracts.cljc  core.cljs  schema.cljc
src/fuxx/adapters/: uxx.cljs
src/fuxx/runtime/: capabilities.cljs  dispatch.cljs  plugins.cljs  render.cljs  router.cljs  state.cljs
src/fuxx/ui/: root.cljs
test/fuxx/: ipc_test.cljc  schema_test.cljc
